# biocybe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  LICENSE  README.md  SECURITY.md  biocybe.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  code_review.yml
config/: biocybe.yaml  detection.yaml  isolation.yaml  learning.yaml  main.yaml
deploy/k8s/: README.md  biocybe-api.yaml
deploy/refresh/: README.md  biocybe-intel-refresh-cronjob.yaml  biocybe-intel-refresh.service  biocybe-intel-refresh.timer  crontab.example
docs/: QUICK_START.md  analogies_biologiques.md  architecture.md  deployment.md  ethical_framework.md  modeles_ia.md
rules/yara/: eicar.yar  ransomware.yar
scripts/: validate_api_load.py  validate_cache_speedup.py  validate_daemon.py  validate_full_stack.py  validate_intel_pipeline.py  validate_scan.py  validate_watcher_batch.py
src/: README.md  __init__.py  scanner.py
src/biocybe/: README.md  __init__.py  __main__.py  audit.py  cli.py  crypto.py  metrics_daemon.py  network_monitor.py  network_sentinel.py  scanner.py  watcher.py
src/biocybe/api/: __init__.py  app.py
src/biocybe/biocybe_core/: __init__.py  core.py
src/biocybe/dashboard/: __init__.py  app.py  data.py
src/biocybe/detection/: signature_detector.py
src/biocybe/explainability/: __init__.py  ethical_framework.py  explainer.py
src/biocybe/intel/: __init__.py  abusech.py  feed_age.py  ioc_lookup.py  rules.py  threatfox.py  urlhaus.py
src/biocybe/isolation/: __init__.py
src/biocybe/learning/: README.md  reinforcement_learning.py
src/biocybe/lymphocytes_b/: __init__.py  b_cell.py
src/biocybe/lymphocytes_t/: __init__.py  t_cell.py
src/biocybe/macrophages/: __init__.py  macrophage.py
src/biocybe/memory/: __init__.py  immune_memory.py
src/biocybe/neutralization/: README.md  __init__.py
src/biocybe/nk_cells/: __init__.py  nk_cell.py
src/biocybe/notify/: __init__.py  manager.py  notifier.py
src/biocybe/regeneration/: __init__.py  healer.py
src/biocybe/swarm/: __init__.py  swarm_sync.py
src/biocybe/swarm_intelligence/: __init__.py  legacy_swarm.py
src/biocybe_core/: core.py
src/detection/: README.md  signature_detector.py
src/isolation/: README.md
src/lymphocytes_b/: b_cell.py
src/macrophages/: __init__.py  macrophage.py
tests/: test_api.py  test_audit.py  test_crypto.py  test_dashboard.py  test_dry_run_and_restore.py  test_immune_memory.py  test_intel_abusech.py  test_intel_feed_age.py  test_intel_rules.py  test_intel_threatfox.py  test_intel_urlhaus.py  test_ioc_lookup.py  test_memory_integration.py  test_memory_metrics.py  test_metrics_daemon.py  test_network_monitor.py  test_network_monitor_service.py  test_network_sentinel.py  test_nk_cell.py  test_notify.py  test_readyz.py  test_regen_watcher.py  test_regeneration.py  test_scan_eicar.py  test_smoke.py  test_swarm.py  test_tcell.py  test_watcher.py  test_yara_cache.py
tools/: review_code.py
validation_cache_workdir/config/: biocybe.yaml
validation_cache_workdir/rules/yara/: ransomware.yar
